--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fal-ai/serverless-client": "^0.14.2",
     "@fal-ai/serverless-proxy": "^0.9.0",
     "axios": "^1.7.5",
+    "firebase": "^10.13.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "next": "14.2.7",
